assets/stylesheets/app.css
/*
 xl 
 lg 1024
 md 768
 sm 667
*/
html{
  font-family: 'Roboto', sans-serif;
  box-sizing: border-box;
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  background-color: #F4F4F4;
	color: #282828;
}
*, *:before, *:after{
  box-sizing: inherit;
  -webkit-box-sizing: inherit;
  -moz-box-sizing: inherit;
}

/* cover css */

.cover{
	width: 100%;
	height: auto;
	background-image: url('../images/background(xl-l).jpg');
	background-repeat: no-repeat;
	background-size: cover;
	color: white;
	text-align: center;
	padding: 20vh 0px 20vh 0px;
}
#name-title{
	font-size: 3rem;
}
#name-title,
#job-title{
	text-shadow: 0px 0px 4px rgba(0, 0, 0, 1);
}
#profile-picture{
	margin: auto;
	height: 200px;
	border-radius: 100px;
}

/* main content css */
#main-container{
	width: 90vw;
	margin: 20px auto;
}
.content-title{
	font-size: 1.5rem;
	font-weight: bold;
	color: #282828;
	border-top: solid 2px #282828;
	border-bottom: solid 2px #282828;
	padding: 10px 0px 10px 0px;
}
.card{
	margin-top: 2rem;
	margin-bottom: 2rem;
}
.card-title{
	font-size: 1rem;
	font-weight: bold;
	text-align: center;
}
.card-content{
	text-align: center;
	letter-spacing: 0.06rem;
	line-height: 1.2rem;
	font-size: 10px;
	font-size: 0.8rem;
}
#video-player{
	margin: 2rem 0px 2rem 0px;
	width: 100%;
}
#second-card{
	margin-top: 0px;
}


/* footer */
footer{
	background-color: #282828;
	width: 100%;
	padding-top: 2rem;
}
.footer{
	text-align: center;	
}
.social-media-links{
	color: white;
	padding: 20px;
}
.social-media-links li{
	display: inline;
	padding: 1rem;
	font-size: 3rem;
}
a{
	text-decoration: none;
	
}
a:visited{
	color: white;
}
.email
{
	margin: 2rem 0px 2rem 0px;
	color: white;
	font-size: 2rem;
	width: 100%;
	min-width: 396px;
}
.contact{
	font-size: 2rem;
	color: white;
}
.sm{
	font-size: 1rem;
}

